# basilica

./: .dockerignore  .gitignore  Cargo.toml  FREIVALDS_DESIGN_DOCUMENT.md  FREIVALDS_DESIGN_DOCUMENT_V2.md  FREIVALDS_IMPLEMENTATION_SUMMARY.md  FREIVALDS_VIRTUALIZATION_DESIGN_DOC.md  FREIVALDS_VM_IMPLEMENTATION_SUMMARY.md  GPU_ATTESTATION_FLOW.md  GPU_ATTESTOR_ARCHITECTURE.md  GPU_ATTESTOR_COMPLETE_GUIDE.md  GPU_ATTESTOR_REFACTORING_SUMMARY.md  GPU_POW_IMPLEMENTATION_SUMMARY.md  GPU_PROFILE_INTEGRATION_SUMMARY.md  README.md  SUMMARY.md  VALIDATOR_KEY_REMOVAL.md  VM_IMPLEMENTATION_COMPLETE.md  basilisk_to_prime_migration_guide.md  check_gpu_mem.py  check_gpu_memory.rs  freivalds_matmul_benchmark.out  gpu_attestation_comparison.md  gpu_info.json  justfile  matmul.py  min_compute.yml  miner.toml  prime.md  test_attestation.json  test_attestation.pub  test_attestation.sig  test_gpu_pow_full_flow.sh  test_gpu_progress.sh  test_h100_config.sh  test_vm_direct.sh  validator.toml
crates/bittensor/: Cargo.toml  build.rs  build.rs.bak
crates/bittensor/examples/: README_test_axon_discovery.md  test_axon_discovery.rs
crates/bittensor/metadata/: README.md  finney.rs  local.rs
crates/bittensor/src/: api.rs  discovery.rs  error.rs  error_tests.rs  lib.rs  registration.rs  retry.rs  service.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  identity.rs  lib.rs  storage.rs
crates/common/src/config/: loader.rs  mod.rs  traits.rs  types.rs
crates/common/src/crypto/: core.rs  ed25519.rs  kdf.rs  keys.rs  mod.rs  p256.rs
crates/common/src/executor_identity/: constants.rs  display.rs  examples.rs  executor_id.rs  identity_store.rs  integration.rs  integration_tests.rs  interfaces.rs  matching.rs  migration.rs  mod.rs  test_summary.md  validation.rs  word_provider.rs  words.rs
crates/common/src/journal/: init.rs  logging.rs  mod.rs  query.rs  types.rs
crates/common/src/metrics/: labels.rs  mod.rs  traits.rs
crates/common/src/network/: mod.rs  public_ip.rs
crates/common/src/persistence/: connection.rs  mod.rs  pagination.rs  sqlite.rs  traits.rs
crates/common/src/services/: mod.rs  traits.rs
crates/common/src/ssh/: config.rs  connection.rs  manager.rs  mod.rs  simple.rs  traits.rs  types.rs
crates/common/tests/: crypto_integration.rs  executor_identity_integration.rs
crates/executor/: Cargo.toml  config.example.toml
crates/executor/src/: lib.rs  main.rs  test_utils.rs
crates/executor/src/cli/: args.rs  commands.rs  mod.rs
crates/executor/src/config/: docker.rs  mod.rs  system.rs  types.rs  validation.rs
crates/executor/src/container_manager/: config_builder.rs  health.rs  logs.rs  mod.rs  operations.rs  types.rs
crates/executor/src/grpc_server/: container_operations.rs  executor_management.rs  health_check.rs  mod.rs  system_profile.rs  tests.rs  types.rs  validator_access.rs
crates/executor/src/journal/: mod.rs  types.rs
crates/executor/src/system_monitor/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  types.rs
crates/executor/src/validation_session/: access_control.rs  hotkey_verifier.rs  mod.rs  rate_limiter.rs  service.rs  tests.rs  types.rs
crates/executor/tests/: config_tests.rs  container_manager_tests.rs  gpu_attestor_integration_tests.rs  grpc_server_tests.rs  integration_tests.rs  system_monitor_tests.rs  validation_session_tests.rs
crates/executor/tests/integration/: container_management_integration_test.rs  grpc_communication_integration_test.rs  mod.rs  resource_allocation_integration_test.rs  system_monitoring_integration_test.rs  validation_session_integration_test.rs
crates/executor/tests/unit/: config_tests.rs  container_manager_tests.rs  grpc_server_tests.rs  mod.rs  system_monitor_tests.rs  validation_session_tests.rs
crates/gpu-attestor/: Cargo.toml  README.md  build.rs
crates/gpu-attestor/examples/: check_embedded_key.rs  cuda_compatibility.rs  cuda_driver_matrix_multiply.rs  gpu_benchmarks.rs  h100_multi_gpu_validation.rs  hopper_blackwell_validation.rs  memory_bandwidth_test.rs  multi_gpu_benchmark.rs  secure_attestation.rs  test_embedded_key.rs
crates/gpu-attestor/src/: cli.rs  integrity.rs  lib.rs  main.rs
crates/gpu-attestor/src/attestation/: builder.rs  mod.rs  signer.rs  types.rs  utils.rs  verifier.rs
crates/gpu-attestor/src/docker/: benchmarker.rs  collector.rs  mod.rs  types.rs
crates/gpu-attestor/src/gpu/: benchmark_collector.rs  benchmarks.rs  cuda_ffi.rs  detection.rs  mod.rs  types.rs
crates/gpu-attestor/src/hardware/: benchmarks.rs  collection.rs  mod.rs  types.rs
crates/gpu-attestor/src/network/: benchmarker.rs  ipinfo.rs  mod.rs  types.rs
crates/gpu-attestor/src/os/: attestor.rs  benchmarker.rs  mod.rs  (+1 more)
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: main.rs
crates/integration-tests/tests/: freivalds_e2e.rs  freivalds_same_machine_e2e.rs  gpu_pow_e2e.rs  gpu_pow_multi_gpu_e2e.rs  miner_executor_flow.rs  secure_gpu_validation_e2e.rs  vm_direct_validation_e2e.rs  vm_protected_validation_e2e.rs  vm_secure_validation_full_e2e.rs
crates/miner/: Cargo.toml
crates/miner/src/: auth.rs  cli.rs  config.rs  executor_manager.rs  lib.rs  main.rs  request_verification.rs  session_cleanup.rs  validator_comms.rs  validator_discovery.rs
crates/protocol/: Cargo.toml  README.md  build.rs
crates/protocol/proto/: common.proto  executor_control.proto  executor_management.proto  executor_registration.proto  freivalds_gpu_pow.proto  gpu_pow.proto  miner_discovery.proto  validator_api.proto
crates/protocol/src/: lib.rs
crates/public-api/: Cargo.toml  README.md
crates/public-api/src/: error.rs  lib.rs  main.rs  server.rs
crates/validator/: Cargo.toml
crates/validator/examples/: freivalds_gpu_profile_demo.rs  test_h100_challenge.rs
crates/validator/migrations/: 20241208_001_add_gpu_profiles.sql  20241208_002_add_weight_allocation_history.sql
crates/validator/src/: config.rs  integration_test.rs  lib.rs  main.rs
crates/validator/tests/: binary_validation_tests.rs  freivalds_integration_test.rs  gpu_profile_integration_test.rs  weight_setting_test.rs
(+378 files in other folders)
