[package]
name = "bittensor"
version = "0.1.0"
edition = "2021"
description = "Centralized Bittensor chain interactions via crabtensor"
rust-version = "1.70"

[features]
default = []
generate-metadata = ["subxt-codegen", "subxt-metadata", "subxt-utils-fetchmetadata", "parity-scale-codec"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Bittensor integration
crabtensor = { workspace = true }

# Additional dependencies for subxt and crypto
subxt = "0.38"
hex = "0.4"
sp-core = "34.0.0"
rand = "0.8"
chrono = "0.4"
home = "0.5"
serde_json = "1.0"

# Internal dependencies
common = { path = "../common" }

# Metadata generation dependencies (only used by binary)
subxt-codegen = { version = "0.38", optional = true }
subxt-metadata = { version = "0.38", optional = true }
subxt-utils-fetchmetadata = { version = "0.38", features = ["url"], optional = true }
parity-scale-codec = { version = "3.6", optional = true }

[build-dependencies]
tokio = { workspace = true }
subxt-codegen = "0.38"
subxt-metadata = "0.38"
subxt-utils-fetchmetadata = "0.38"
parity-scale-codec = "3.6"

[[bin]]
name = "generate-metadata"
path = "src/bin/generate-metadata.rs"

[dev-dependencies]
tokio-test = "0.4" 