[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
tempfile = "3.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Internal dependencies
validator = { path = "../validator" }
protocol = { path = "../protocol" }
common = { path = "../common" }
gpu-attestor = { path = "../gpu-attestor" }

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "gpu_pow_e2e"
path = "tests/gpu_pow_e2e.rs"

[[test]]
name = "miner_executor_flow"
path = "tests/miner_executor_flow.rs"

[[test]]
name = "freivalds_e2e"
path = "tests/freivalds_e2e.rs"

