[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
tempfile = "3.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
num_cpus = "1.16"
prost-types = "0.12"
dirs = "5.0"
rand = "0.8"

# Internal dependencies
validator = { path = "../validator" }
protocol = { path = "../protocol" }
common = { path = "../common" }

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "miner_executor_flow"
path = "tests/miner_executor_flow.rs"


